the screen and getting user input "real time". 

To make this better I can stagger the drawing of the screen. Technically, 
the image doesn't need to change until the user has input something 
(unless I later want to implement idle animation for the units :D).

If I'm doing this with only the Graphics module I have to layer the drawing 
of the screen. The BG obviously goes on the bottom (terrain), then the unit,
then the cursor with a transparent middle (only draw the edges the 
cursor is highlighting).

As for the hud with information I'd like to implement, maybe I can make the 
screen a bit larger (by one grid), fill it with a neutral color and put text
over it for the info about unit/terrain.

I thought about using an image editor to draw the BG image png and importing
it to the screen but that would mean the tiles would be set on loading.
Instead, I think I should draw tile types (forest, ground, mountain/hill)
and load them per tile on the grid. I think I can compile them all once, save
it, and redraw when the screen updates.

Since I'm at it I think I'll make the cursor just a border and commit the files.

7/3/19 6:32PM
+Added the boundry box so the users cursor can't be out of bounds. This
change was made possible by adding a (w,h) param to the push function.

7:39PM
+Made the 2D list to hold tile types and drew a single tile for testing. Now
I have to make the position variable depending on the board list and the tile
base color reflect the tile type. I'm commiting this now because my battery
bank is getting low on power and I'm at a cafe.. I would hate to lose any 
progress lol

8:49PM
+Drew the actual game tiles by taking a 2D list of terrain types. 
As of now, the gameboard is being drawn every state update but it doesn't 
have to be. It can be initialized once into a single image with blit_image
maybe?? Anyways, I'm just super stoked it worked like the pseudocode from my
notebook!